--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
       with:
         distribution: temurin
         java-version: 8
+    - name: Install verilator
+      run: sudo apt update && sudo apt install -y verilator
     - name: Simulation
       run: sbt "runMain wavebpf.WbpfSim"
     - name: Generate verilog
