--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
       with:
         distribution: temurin
         java-version: 8
+    - name: Install iverilog
+      run: sudo apt-get install -y build-essential libboost-dev iverilog
     - name: Install verilator
       run: |
         sudo apt-get install -y git perl python3 make autoconf g++ flex bison ccache libgoogle-perftools-dev numactl perl-doc libfl-dev libfl2 zlibc zlib1g zlib1g-dev
