--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Test
       run: sbt test
     - name: Generate verilog
-      run: sbt "runMain wavebpf.WbpfVerilogSyncReset"
+      run: sbt "runMain wavebpf.WbpfVerilogSyncResetHighFreq"
